add sign in page add old version js add authenticate func

--- a/templates/__base__.html
+++ b/templates/__base__.html
@@ -7,9 +7,11 @@
     <title>{% block title %} ? {% endblock %} - Awesome Python Webapp</title>
     <link rel="stylesheet" href="/static/css/uikit.min.css">
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/md5.js"></script>
+    <script src="/static/js/md5.min.js"></script>
+    <script src="/static/js/sha1.min.js"></script>
     <script src="/static/js/uikit.min.js"></script>
     <script src="/static/js/uikit-icons.min.js"></script>
+    <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
