--- a/templates/manage_blog_edit.html
+++ b/templates/manage_blog_edit.html
@@ -52,3 +52,44 @@ $(function (){
 </script>
 
 {% endblock %}
+
+{% block content %}
+	<div class="uk-panel uk-margin-bottom">
+		<div class="uk-panel uk-panel-box">
+			<ul class="uk-brandcrumb">
+				<li><a href="/manage/comments">comments</a></li>
+				<li><a href="/manage/blogs">blogs</a></li>
+				<li><a href="/manage/users">users</a></li>
+			</ul>
+		</div>
+	</div>
+	
+	<div id="error" class="uk-width-1-1">
+	</div>
+
+	<div id="loading" class="uk-width-1-1 uk-text-center">
+		<span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin">loading......</i></span>
+	</div>
+
+	<div id="vm" class="uk-width-2-3">
+		<form v-on="submit:submit" class="uk-form uk-form-stacked">
+			<div class="uk-alert uk-alert-danger uk-hidden"></div>
+			<div class="uk-form-row">
+                <label class="uk-form-label">title:</label>
+                <div class="uk-form-controls">
+                    <input v-model="name" name="name" type="text" placeholder="标题" class="uk-width-1-1">
+                </div>
+            </div>
+            <div class="uk-form-row">
+                <label class="uk-form-label">content:</label>
+                <div class="uk-form-controls">
+                    <textarea v-model="content" rows="16" name="content" placeholder="内容" class="uk-width-1-1" style="resize:none;"></textarea>
+                </div>
+            </div>
+            <div class="uk-form-row">
+                <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-save"></i>save</button>
+                <a href="/manage/blogs" class="uk-button"><i class="uk-icon-times"></i>cancel</a>
+            </div>
+		</form>
+	</div>
+{% endblock %}
