1.modify page support uikit version 2.25.0

--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 <script>
 	function validateEmail(email){
 		var re = /^[a-z0-9\.\-\_]+\@[a-z0-9\-\_]+(\.[a-z0-9\-\_]+){1,4}$/;
-		return re.test(email.toLowCase());
+		return re.test(email.toLowerCase());
 	}
 
 	$(function (){
@@ -18,7 +18,7 @@
 				password1:'',
 				password2:''
 			},
-			method:{
+			methods:{
 				submit:function (event){
 					event.preventDefault();
 					var $form=$('#vm');
@@ -38,7 +38,7 @@
 					$form.postJSON('/api/users',{
 						name:this.name.trim(),
 						email:email,
-						password:CryptoJS.SHA1(email+':'+password1).toString()
+						passwd:CryptoJS.SHA1(email+':'+this.password1).toString()
 					},function(err,r){
 						if(err){
 							return $form.showFormError(err);
@@ -48,16 +48,16 @@
 				}
 			}
 		});
-		return $('#vm').show();
+		$('#vm').show();
 	});
 
-</script>>
+</script>
 
 {% endblock %}
 
 {% block content %}
     <div class="uk-width-2-3">
-        <h1>欢迎注册！</h1>
+        <h1>welcome register！</h1>
         <form id="vm" v-on="submit: submit" class="uk-form uk-form-stacked">
             <div class="uk-alert uk-alert-danger uk-hidden"></div>
             <div class="uk-form-row">
@@ -66,6 +66,7 @@
                     <input v-model="name" type="text" maxlength="50" placeholder="name" class="uk-width-1-1">
                 </div>
             </div>
+            <!--
             <div class="uk-form-row">
                 <label class="uk-form-label">email:</label>
                 <div class="uk-form-controls">
@@ -87,6 +88,7 @@
             <div class="uk-form-row">
                 <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-user"></i> register</button>
             </div>
+            -->
         </form>
     </div>
 {% endblock %}
