--- a/templates/__base__.html
+++ b/templates/__base__.html
@@ -4,22 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     {% block meta %}<!-- block meta  -->{% endblock %}
-    <title>{% block title %} ? {% endblock %} - Awesome Python Webapp</title>
-    <link rel="stylesheet" href="/static/css/uikit.min.css">
+    <title>{% block title %} ? {% endblock %} - feison Python Webapp</title>
+    <link rel="stylesheet" href="/static/css/uikit.min.css" />
+
+    <!-- uikit version 2.25 -->
+    <link rel="stylesheet" href="/static/css/uikit.gradient.min.css" />
+    <link rel="stylesheet" href="/static/css/awesome.css" />
+    <script src="/static/js/sticky.min.js"></script>
+    <!-- uikit version 2.25 -->
+
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/md5.min.js"></script>
     <script src="/static/js/sha1.min.js"></script>
     <script src="/static/js/uikit.min.js"></script>
-    <script src="/static/js/uikit-icons.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
+
+    <!-- uikit version 3.0.0
+    <script src="/static/js/uikit-icons.min.js"></script>
+    <script src="/static/js/md5.min.js"></script>
+        uikit version 3.0.0 -->
+
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
-    <!--
+    <!-- uikit version 2.25.0 -->
     <nav class="uk-navbar uk-navbar-attached uk-margin-bottom">
         <div class="uk-container uk-container-center">
-            <a href="/" class="uk-navbar-brand">Awesome</a>
+            <a href="/" class="uk-navbar-brand">feison</a>
             <ul class="uk-navbar-nav">
                 <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
                 <li><a target="_blank" href="#"><i class="uk-icon-book"></i> 教程</a></li>
@@ -44,10 +55,11 @@
             </div>
         </div>
     </nav>
-    -->
+
+    <!-- uikit version 3.0.0
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
-            <a href="/" class="uk-navbar-item uk-logo">Awesome</a>
+            <a href="/" class="uk-navbar-item uk-logo">feison</a>
             <ul class="uk-navbar-nav">
                 <li class="uk-active" data-url="blogs"><a href="/"><i uk-icon="home"></i> 日志</a></li>
                 <li><a target="_blank" href="#"><i uk-icon="book"></i> 教程</a></li>
@@ -59,9 +71,9 @@
                     <li><a href="/signin"><i uk-icon="sign-in"></i> 登陆</a></li>
                     <li><a href="/register"><i uk-icon="pencil"></i> 注册</a></li>
             </ul>
-        </div>
-        
+        </div> 
     </nav>
+    -->
 
     <div class="uk-container uk-container-center">
         <div class="uk-grid">
@@ -76,12 +88,21 @@
         <div class="uk-container uk-container-center uk-text-center">
             <div class="uk-panel uk-margin-top uk-margin-bottom">
                 <p>
+                    <!-- uikit version 3.0.0
                     <a target="_blank" href="#" class="uk-icon-button" uk-icon="github"></a>
                     <a target="_blank" href="#" class="uk-icon-button" uk-icon="linkedin"></a>
                     <a target="_blank" href="#" class="uk-icon-button" uk-icon="twitter"></a>
+                        uikit version 3.0.0 -->
+
+                    <!-- uikit version 2.25.0 -->
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-github"></a>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-linkedin-square"></a>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
+                    <!-- uikit version 2.25.0 -->
+                    
                 </p>
-                <p>Powered by <a href="#">Awesome Python Webapp</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
-                <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
+                <p>Powered by <a href="#">feison web</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
+                <p><a href="http://feison.blog" target="_blank">www.feison.blog</a>. All rights reserved.</p>
                 <a target="_blank" href="#"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
             </div>
         </div>
