--- a/templates/signin.html
+++ b/templates/signin.html
@@ -3,23 +3,26 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>sign in</title>
-	<!-- new version
-	<link rel="stylesheet" type="text/css" href="/static/css/uikit.min.css">
+    <!-- new version
+	<link rel="stylesheet" type="text/css" href="/static/css/uikit.min.css" />
 	<script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/md5.min.js"></script>
-    <script src="/static/js/sha1.min.js"></script>
-    <script src="/static/js/uikit.min.js"></script>
-    <script src="/static/js/uikit-icons.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
-	-->
-	<link rel="stylesheet" href="/static/css/uikit.min.css">
-    <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/sha1.min.js"></script>
-    <script src="/static/js/uikit.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
-    <script src="/static/js/awesome.js"></script>
-    <script>
+	<script src="/static/js/md5.min.js"></script>
+	<script src="/static/js/sha1.min.js"></script>
+	<script src="/static/js/uikit.min.js"></script>
+	<script src="/static/js/uikit-icons.min.js"></script>
+	<script src="/static/js/vue.min.js"></script>
+    -->
+	
+    <!-- old version -->
+	<link rel="stylesheet" href="/static/css/uikit.min.css" />
+	<link rel="stylesheet" href="/static/css/uikit.gradient.min.css" />
+	<script src="/static/js/jquery.min.js"></script>
+	<script src="/static/js/sha1.min.js"></script>
+	<script src="/static/js/uikit.min.js"></script>
+	<script src="/static/js/vue.min.js"></script>
+	<script src="/static/js/awesome.js"></script>
+
+	<script>
     	$(function(){
     		var vmAuth = new Vue({
     			el:'#vm',
@@ -52,13 +55,13 @@
 <body class="uk-height-1-1">
 	<div class="uk-vertical-align uk-text-center uk-height-1-1">
 		<div class="uk-vertical-align-middle" style="width:320px">
-			<p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a><a href="/">Awesome Python Webapp</a></p>
+			<p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a><a href="/">feison Python Webapp</a></p>
 			<form id="vm" v-on="submit:submit" class="uk-panel uk-panel-box uk-form">
 				<div class="uk-alert uk-alert-danger uk-hidden"></div>
 				<div class="uk-form-row">
 					<div class="uk-form-icon uk-width-1-1">
 						<i class="uk-icon-envelope-o"></i>
-						<input type="text" name="email" v-model="eamil" placeholder="email" maxlength="50" class="uk-width-1-1 uk-form-large">
+						<input type="text" name="email" v-model="email" placeholder="email" maxlength="50" class="uk-width-1-1 uk-form-large">
 					</div>					
 				</div>
 				<div class="uk-form-row">
